--- a/build.gradle
+++ b/build.gradle
@@ -21,8 +21,7 @@ repositories {
 }
 
 dependencies {
-    compile group: 'name.wendelaar.matthijs', name: "SnowDB", version: '1.0.0'
-    compile group: 'name.wendelaar', name: "SimpleValidator", version: '1.0.0'
+    compile group: 'name.wendelaar', name: 'snowdb', version: '1.0.0'
     compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.6'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
