--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ repositories {
 
 dependencies {
     compile group: 'name.wendelaar', name: 'snowdb', version: '2.0.0'
-    compile group: 'name.wendelaar', name: 'simplevalidator', version: "1.0.1"
+    //compile group: 'name.wendelaar', name: 'simplevalidator', version: "1.0.1"
     compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.6'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
