--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     compile group: 'name.wendelaar', name: 'snowdb', version: '2.0.0'
     //compile group: 'name.wendelaar', name: 'simplevalidator', version: "1.0.1"
     compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.6'
+    compile group: 'org.mindrot', name: 'jbcrypt', version: '0.3m'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
