added some things

--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ dependencies {
 jar {
     manifest {
         attributes(
-            'Main-Class': 'name.wendelaar.Main'
+            'Main-Class': 'name.wendelaar.projectbus.main.Main'
         )
     }
 }
