--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,10 @@ version '0.1.0-BETA'
 apply plugin: "com.github.johnrengelman.shadow"
 apply plugin: 'java'
 
-sourceCompatibility = 1.8
+compileJava {
+    sourceCompatibility = 1.8
+    targetCompatibility = 1.8
+}
 
 repositories {
     mavenLocal()
